<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
tools:context=".Swiper">

    <RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/myRadioGroup"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/radio_A1"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:text="@string/A1"
            android:onClick="onRadioButtonClicked"
            android:checked="true" />



    <RadioButton android:id="@+id/radio_B1"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:text="@string/B1"
   android:onClick="onRadioButtonClicked"
   android:checked="false" />

    <RadioButton android:id="@+id/radio_C1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/C1"
android:onClick="onRadioButtonClicked"
android:checked="false" />
</RadioGroup>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="       Od"
            android:id="@+id/textView8" />

    <EditText
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint = "1"
            android:layout_weight="0.01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     Do"
            android:id="@+id/textView9" />

        <EditText
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint = "100"
            android:onClick="onEditTextClicked"
            android:layout_weight="0.02" />

    </LinearLayout>

