<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="77dp"
        android:layout_height="22dp"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    1272 slov"
            android:id="@+id/textView5"
            android:layout_weight="0.14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 5856 slov"
            android:id="@+id/textView6"
            android:layout_weight="0.15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10783 slov"
            android:id="@+id/textView7"
            android:layout_weight="0.10" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:id="@+id/button"
        android:onClick="order" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:onClick="order2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:onClick="order3" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zobrazi seznam slov"
                android:id="@+id/textView" />
    </ScrollView>


</LinearLayout>